add read category endpoint
- add endpoint for reading unique question categories for frontend filter component
- update api documentation
