# backend/question-service/src/routes/questionRoutes.ts
@@ -6,6 +6,7 @@ import {
   updateQuestion,
   readQuestionsList,
   readQuestionIndiv,
+  readCategories,
 } from "../controllers/questionController.ts";
 
 const router = express.Router();
@@ -15,6 +16,8 @@ router.post("/questions", createQuestion);
 router.post("/questions/images", createImageLink);
 
 router.put("/questions/:id", updateQuestion);
+
+router.get("/questions/categories", readCategories);
 
 router.get("/questions", readQuestionsList);
 
