# backend/question-service/swagger.yml
@@ -58,7 +58,7 @@ definitions:
     properties:
       message:
         type: string
-        deescription: Message
+        description: Message
   ServerError:
     type: object
     properties:
@@ -124,6 +124,83 @@ paths:
             application/json:
               schema:
                 $ref: "#/definitions/ServerError"
+    get:
+      tags:
+        - questions
+      summary: Reads a list of questions
+      description: Reads a limited list of questions based on current page and question limit per page, taking into account search and filter conditions (if any).
+      parameters:
+        - in: query
+          name: page
+          type: integer
+          required: true
+          description: Page of questions to return
+        - in: query
+          name: qnLimit
+          type: integer
+          required: true
+          description: Limit on number of questions to return
+        - in: query
+          name: title
+          type: string
+          required: false
+          description: Question title search keywords
+        - in: query
+          name: complexities
+          schema:
+            oneOf:
+              - type: string
+              - type: array
+                items:
+                  type: string
+          required: false
+          description: Question complexity filters
+        - in: query
+          name: categories
+          schema:
+            oneOf:
+              - type: string
+              - type: array
+                items:
+                  type: string
+          required: false
+          description: Question category filters
+      responses:
+        200:
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Message
+                  pages:
+                    type: integer
+                    description: Total number of pages of questions
+                  questions:
+                    type: array
+                    items:
+                      $ref: "#/definitions/Question"
+        400:
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/definitions/Error"
+        404:
+          description: Question Not Found
+          content:
+            application/json:
+              schema:
+                $ref: "#/definitions/Error"
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/definitions/ServerError"
   /api/questions/{id}:
     put:
       tags:
@@ -155,8 +232,8 @@ paths:
                     description: Message
                   question:
                     $ref: "#/definitions/Question"
-        400:
-          description: Bad Request
+        404:
+          description: Question Not Found
           content:
             application/json:
               schema:
@@ -189,8 +266,78 @@ paths:
                   message:
                     type: string
                     description: Message
-        400:
-          description: Bad Request
+        404:
+          description: Question Not Found
+          content:
+            application/json:
+              schema:
+                $ref: "#/definitions/Error"
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/definitions/ServerError"
+    get:
+      tags:
+        - questions
+      summary: Reads a question
+      description: Reads a question
+      parameters:
+        - in: path
+          name: id
+          type: string
+          required: true
+          description: Question id
+      responses:
+        200: 
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Message
+                  question:
+                    $ref: "#/definitions/Question"
+        404: 
+          description: Question Not Found
+          content:
+            application/json:
+              schema:
+                $ref: "#/definitions/Error"
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/definitions/ServerError"
+  /api/questions/categories:
+    get:
+      tags:
+        - questions
+      summary: Returns question categories
+      description: Returns list of unique question categories
+      responses:
+        200: 
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Message
+                  categories:
+                    type: array
+                    items:
+                      type: string
+                    description: Categories
+        404:
+          description: Categories Not Found
           content:
             application/json:
               schema:
